--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,17 @@
 .header {
   display: flex;
+  flex-direction: row;
+  column-gap: 44px;
+  align-items: center;
   font-size: 24px;
+  min-height: 74px;
+  margin: 0;
+  padding: 0;
+
+  border: 1px dotted gray;
+}
+
+.header__logo {
+  max-width: 38px;
+  max-height: 38px;
 }
