--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   background-color: rgb(255, 255, 255);
   margin: 0 auto;
-  padding: 0;
+  padding: 0 4.3% 0;
   max-width: 1280px;
   min-width: 320px;
   box-sizing: border-box;
