--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -28,6 +28,7 @@
   border-top-left-radius: 9px;
   border-bottom-left-radius: 9px;
   padding: 0 0 0 15px;
+  box-sizing: border-box;
   flex-grow: 1;
 }
 
