--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   padding: 0 4.3% 0;
   max-width: 1280px;
   min-width: 320px;
+  min-height: 40vh;
   box-sizing: border-box;
 
   font-family: 'Inter', Arial, sans-serif;
