--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   display: flex;
   flex-direction: row;
   column-gap: 44px;
@@ -12,4 +13,22 @@
 .header__logo {
   max-width: 38px;
   max-height: 38px;
+}
+
+.header__menu-btn {
+  background-image: url('../../images/header_menu-btn.svg');
+  background-color: rgb(255, 255, 255);
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: none;
+  width: 44px;
+  height: 44px;
+  margin: 0 0 0 auto;
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity .2s linear;
+}
+
+.header__menu-btn:hover {
+  opacity: .6
 }
