--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,5 +1,31 @@
 .nav {
-  width: 100%
+  width: 100%;
+  position: relative;
+}
+
+.nav__item {
+  margin: 0;
+  padding: 0;
+}
+
+.nav__close-btn {
+  position: absolute;
+  top: 22px;
+  right: 22px;
+  background-image: url('../../images/nav_close-btn.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: rgb(255, 255, 255);
+  border: none;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity .2s linear;
+}
+
+.nav__close-btn:hover {
+  opacity: .6;
 }
 
 .nav__menu {
@@ -8,10 +34,11 @@
   flex-direction: row;
   column-gap: 16px;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   width: 100%;
   margin: 0;
   padding: 0;
+  line-height: .7;
 }
 
 .nav__btn {
@@ -45,5 +72,83 @@
   font-size: 14px;
   line-height: 1.1;
   font-weight: 500
+}
+
+.popup {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .3);
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .nav {
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    background-color: white;
+    top: 0;
+    right: 0;
+    width: 68vw;
+    height: 77vh;
+    padding: 15vh 0 8vh 0;
+  }
+
+  .nav__menu {
+    flex-direction: column;
+    row-gap: 28px;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    padding: 0;
+  }
+
+  .nav__item_type_profile {
+    margin: auto 0 0 0;
+  }
+
+  .nav__btn {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.22;
+  }
+
+}
+
+@media screen and (max-width: 767px) {
+  .nav {
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    background-color: white;
+    top: 0;
+    right: 0;
+    width: 100vw;
+    height: 76vh;
+    padding: 18vh 0 6vh 0;
+  }
+
+  .nav__menu {
+    flex-direction: column;
+    row-gap: 24px;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    padding: 0;
+  }
+
+  .nav__item_type_profile {
+    margin: auto 0 0 0;
+  }
+
+  .nav__btn {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.22;
+  }
 }
 
