--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -1,13 +1,13 @@
 .main {
   width: 100%;
   margin: 0;
-  padding: 80px 0 0 0;
+  padding: 0;
 }
 
 .main__list {
   list-style: none;
+  padding: 80px 0 28px 0;
   margin: 0;
-  padding: 0;
   display: grid;
   grid-template-columns: repeat(3, minmax(1%, 1fr));
   grid-auto-rows: 231px;
@@ -15,24 +15,35 @@
   column-gap: 2.6%;
 }
 
+.main__pagination-btn {
+  border: 1px solid rgb(232, 232, 232);
+  border-radius: 6px;
+  background-color: rgb(255, 255, 255);
+  width: 320px;
+  height: 36px;
+  font-size: 12px;
+  line-height: 1.2;
+  font-weight: 500;
+  display: block;
+  padding: 0;
+  margin: 50px auto 80px;
+}
+
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  .main {
-    padding: 70px 0 0 0;
-  }
 
   .main__list {
+    padding: 70px 0 12px 0;
     grid-template-columns: repeat(2, minmax(1%, 1fr));
     row-gap: 47px;
   }
+
 }
 
 @media screen and (max-width: 767px) {
-  .main {
-    padding: 50px 0 0 0;
-  }
 
   .main__list {
+    padding: 50px 0 13px 0;
     grid-template-columns: 100%;
     row-gap: 39px;
   }
