--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,23 @@
+.app {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(255, 255, 255);
+  margin: 0 auto;
+  padding: 0 4.3% 0;
+  max-width: 1280px;
+  min-width: 320px;
+  min-height: 40vh;
+  box-sizing: border-box;
 
+  font-family: 'Inter', Arial, sans-serif;
+  font-style: normal;
 
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
 
+  /* While developing */
+  border: 1px solid rebeccapurple;
+}
