--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,8 +6,12 @@
   align-items: center;
   font-size: 24px;
   min-height: 74px;
-  margin: 0;
-  padding: 0;
+
+  margin: 0 auto;
+  padding: 0 4.3% 0;
+  box-sizing: border-box;
+  max-width: 1280px;
+  min-width: 320px;
 }
 
 .header__logo {
