--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,11 @@
 
 .body {
   background-color: rgb(255, 255, 255);
+  font-family: 'Inter', Arial, sans-serif;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
 }
