--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -1,1 +1,84 @@
+.promo {
+  position: relative;
+  background-color: rgba(70, 93, 255, 1);
+  height: 560px;
+}
 
+.promo__container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 102px;
+  margin: 0 auto;
+  padding: 50px 4.3% 0;
+  box-sizing: border-box;
+  max-width: 1280px;
+}
+
+.promo__header {
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 1.3;
+  letter-spacing: -0.04em;
+  color: rgb(255, 255, 255);
+  margin: 0;
+  max-width: 680px;
+}
+
+.promo__image {
+  width: 722px;
+  height: 244px;
+  margin: 0 0 0 auto;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .promo {
+    height: 844px;
+  }
+
+  .promo__container {
+    row-gap: 140px;
+    padding: 300px 4.3% 0;
+  }
+
+  .promo__header {
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .promo__image {
+    width: 680px;
+    height: 230px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .promo {
+    height: 630px;
+  }
+
+  .promo__container {
+    display: flex;
+    flex-direction: column;
+    row-gap: 60px;
+    margin: 0 auto;
+    padding: 183px 0 0;
+    box-sizing: border-box;
+    overflow: hidden;
+  }
+
+  .promo__header {
+    margin: 0 auto;
+    padding: 0 3.2%;
+    text-align: center;
+    font-size: 31px;
+    line-height: 1.25;
+  }
+
+  .promo__image {
+    width: 100%;
+    height: 230px;
+    object-fit: cover;
+    object-position: center;
+  }
+}
