feat: SavedMovies component

--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -64,6 +64,35 @@
   opacity: .6;
 }
 
+.card__remove-btn {
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  width: 21px;
+  height: 21px;
+  background-image: url('../../../images/card_remove-btn.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgb(249, 249, 249);
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear .2s, opacity .2s linear;
+}
+
+.card__image:hover ~ .card__remove-btn {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0s linear 0s, opacity .2s linear;
+}
+
+.card__remove-btn:hover {
+  opacity: .6;
+  visibility: visible;
+}
+
 .card__caption {
   display: flex;
   justify-content: space-between;
