--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -72,17 +72,21 @@
 
 .nav__btn {
   font-size: 13px;
+  font-weight: 400;
   line-height: 1.38;
-  background-color: rgb(255, 255, 255);
-  border: none;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 1);
   padding: 0;
-  opacity: 1;
-  transition: opacity .2s linear, background-image .1s linear;
+  cursor: pointer;
+  transition: color .2s linear;
 }
 
 .nav__btn:hover {
-  opacity: .6;
-  cursor: pointer;
+  color: rgba(0, 0, 0, .6);
+}
+
+.nav__btn_active {
+  font-weight: 500;
 }
 
 .nav__item_type_profile {
@@ -92,8 +96,8 @@
 .nav__btn_type_profile {
   border: 2px solid rgb(170, 170, 170);
   border-radius: 50px;
-  min-height: 32px;
-  min-width: 100px;
+  height: 32px;
+  width: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -146,6 +150,10 @@
     line-height: 1.22;
   }
 
+  .nav__btn_active {
+    border-bottom: 2px solid rgb(0, 0, 0);
+  }
+
 }
 
 @media screen and (max-width: 767px) {
@@ -190,6 +198,10 @@
     font-size: 18px;
     font-weight: 500;
     line-height: 1.22;
+  }
+
+  .nav__btn_active {
+    border-bottom: 2px solid rgb(0, 0, 0);
   }
 }
 
