--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,7 +19,7 @@
   padding: 0 4.3% 0;
   box-sizing: border-box;
   max-width: 1280px;
-  min-width: 320px;
+  /* min-width: 320px; */
 }
 
 .header__logo {
