--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -32,7 +32,7 @@
 
 }
 
-.nav__close-btn {
+/* .nav__close-btn {
   position: absolute;
   top: 22px;
   right: 22px;
@@ -50,7 +50,7 @@
 
 .nav__close-btn:hover {
   opacity: .6;
-}
+} */
 
 .nav__menu {
   list-style: none;
@@ -105,16 +105,6 @@
   font-size: 14px;
   line-height: 1.1;
   font-weight: 500
-}
-
-.popup {
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, .3);
 }
 
 
