--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -30,6 +30,7 @@
 }
 
 .profile__field {
+  position: relative;
   max-width: 100%;
   display: flex;
   flex-direction: row;
@@ -89,16 +90,35 @@
   opacity: .6;
 }
 
+.profile__btn_type_submit:disabled {
+  cursor:not-allowed;
+  color: rgb(0, 0, 0);
+}
+
 .profile__btn_type_submit {
   margin: auto 0 0 0;
   font-weight: 400;
 }
 
-
 .profile__btn_type_signout {
   margin: 16px 0 0 0;
   font-weight: 500;
   color: rgb(238, 52, 101);
+}
+
+.profile__error {
+  max-width: 100%;
+  color: rgb(238, 52, 101);
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 10px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  position: absolute;
+  top: 16px;
+  right: 0;
+  /* visibility: hidden; */
 }
 
 
