--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -38,8 +38,7 @@
 }
 
 .auth__input:focus {
-  outline: none;
-  background-color: rgb(250, 250, 250);
+  outline: 1px solid rgb(239, 239, 239);
 }
 
 .auth__input_type_error {
@@ -69,6 +68,10 @@
 
 .auth__submit:disabled {
   cursor:not-allowed;
+}
+
+.auth__submit:focus {
+  outline: 1px solid rgb(204, 101, 52);
 }
 
 .auth__error {
