--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -25,8 +25,9 @@
   background-image: url('../../images/popup_close-btn.svg');
   background-repeat: no-repeat;
   background-size: contain;
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 1);
   border: none;
+  border-radius: 50%;
   width: 30px;
   height: 30px;
   cursor: pointer;
