--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 70px 4.3% 0;
   box-sizing: border-box;
+  width: 100%;
   max-width: 1280px;
   min-width: 320px;
   min-height: 40vh;
