--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -35,7 +35,7 @@
 
 .header__menu-btn {
   background-image: url('../../images/header_menu-btn.svg');
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0);
   background-repeat: no-repeat;
   background-size: contain;
   border: none;
@@ -49,6 +49,10 @@
 
 .header__menu-btn:hover {
   opacity: .6
+}
+
+.header__menu-btn_type_promo {
+  filter: invert(100%);
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
