--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -6,6 +6,16 @@
 .nav__item {
   margin: 0;
   padding: 0;
+  opacity: 1;
+  transition: opacity .2s linear;
+}
+
+.nav__item:hover {
+  opacity: .6;
+}
+
+.nav__item_type_profile {
+  margin: 0 0 0 auto;
 }
 
 .nav__register {
@@ -31,26 +41,6 @@
   height: 32px;
 
 }
-
-/* .nav__close-btn {
-  position: absolute;
-  top: 22px;
-  right: 22px;
-  background-image: url('../../images/nav_close-btn.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-color: rgb(255, 255, 255);
-  border: none;
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-  opacity: 1;
-  transition: opacity .2s linear;
-}
-
-.nav__close-btn:hover {
-  opacity: .6;
-} */
 
 .nav__menu {
   list-style: none;
@@ -78,19 +68,14 @@
   color: rgba(0, 0, 0, 1);
   padding: 0;
   cursor: pointer;
-  transition: color .2s linear;
 }
 
-.nav__btn:hover {
-  color: rgba(0, 0, 0, .6);
+.nav__btn_type_promo {
+  color: rgba(255, 255, 255, 1);
 }
 
 .nav__btn_active {
   font-weight: 500;
-}
-
-.nav__item_type_profile {
-  margin: 0 0 0 auto;
 }
 
 .nav__btn_type_profile {
@@ -105,6 +90,29 @@
   font-size: 14px;
   line-height: 1.1;
   font-weight: 500
+}
+
+.nav__btn_type_profile-promo {
+  color: rgb(255, 255, 255);
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 50px;
+  height: 32px;
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 7px;
+  font-size: 14px;
+  line-height: 1.1;
+  font-weight: 500
+}
+
+.nav__icon {
+
+}
+
+.nav__icon_type_promo {
+  filter: invert(100%)
 }
 
 
