--- a/src/components/Tooltip/Tooltip.css
+++ b/src/components/Tooltip/Tooltip.css
@@ -18,6 +18,7 @@
   font-size: 18px;
   line-height: 1.2;
   margin: 0;
+  color: rgb(117, 117, 117);
 
   max-width: 100%;
   text-overflow: ellipsis;
