feat: Tooltip icon

--- a/src/components/Tooltip/Tooltip.css
+++ b/src/components/Tooltip/Tooltip.css
@@ -1,16 +1,24 @@
 .tooltip__container {
   display: flex;
   flex-direction: column;
-  row-gap: 0;
+  row-gap: 10px;
   justify-content: center;
   align-items: center;
   background-color: rgb(249, 249, 249);
-  padding: 35px 3% 20px;
-  margin: 265px auto;
+  padding: 15px 3% 15px;
+  margin: 205px auto;
   width: 35%;
-  height: 150px;
+  height: 190px;
   border-radius: 6px;
   box-sizing: border-box;
+}
+
+.tooltip__icon {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  width: 50px;
+  height: 50px;
 }
 
 .tooltip__message {
@@ -32,7 +40,7 @@
   height: 45px;
   width: 50%;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.21;
   color:rgb(255, 255, 255);
   max-width: 100%;
@@ -59,7 +67,7 @@
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .tooltip__container {
     width: 45%;
-    margin: 295px auto;
+    margin: 235px auto;
   }
 
   .tooltip__message {
@@ -70,7 +78,7 @@
 @media screen and (max-width: 767px) {
   .tooltip__container {
     width: 92%;
-    margin: 316px auto;
+    margin: 256px auto;
   }
 
   .tooltip__btn {
