--- a/src/components/Movies/Message/Message.css
+++ b/src/components/Movies/Message/Message.css
@@ -9,13 +9,13 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  padding: 70px 0 0 0;
+  padding: 70px 0 25px 0;
   box-sizing: border-box;
   max-width: 1280px;
   width: 100%;
 }
 
-.message__image {
+.message__icon {
   padding: 3px;
   box-sizing: border-box;
   width: 27px;
@@ -32,13 +32,13 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .message__container {
-    padding: 120px 0 0 0;
+    padding: 120px 0 50px 0;
   }
 }
 
 @media screen and (max-width: 767px) {
   .message__container {
-    padding: 80px 0 0 0;
+    padding: 80px 0 40px 0;
   }
 
   .message__paragraph {
